# cookiecutter-rapyd-django

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  cookiecutter.json  pyproject.toml  readme.md  requirements-dev.txt  test_cookiecutter.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
{{ cookiecutter.project_directory }}/: .editorconfig  .env.example  .pre-commit-config.yaml  AGENTS.md  Makefile  Pipfile  README.md  gunicorn_start  pyproject.toml  setup_env.sh  supervisor.conf
{{ cookiecutter.project_directory }}/.github/workflows/: test.yml
{{ cookiecutter.project_directory }}/tests/: test_smoke.py
{{ cookiecutter.project_directory }}/{{ cookiecutter.project_slug }}/config/: asgi.py  settings.py  wsgi.py
{{ cookiecutter.project_directory }}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: asgi.py  settings.py  urls.py  wsgi.py
