[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = {{ cookiecutter.project_description | tojson }}
requires-python = ">={{ cookiecutter.python_version }}"
authors = [
    {name = {{ cookiecutter.author_name | tojson }}, email = {{ cookiecutter.author_email | tojson }}}
]
dependencies = [
    "django>=4.2,<5.0",
    "environs[django]",
    "django-rapyd-modernauth",
]

[dependency-groups]
dev = ["pre-commit", "pytest", "ruff"]

[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
# E501: line length (handled by formatter)
# S101: assert in tests is fine
ignore = ["E501", "S101"]
per-file-ignores = {"tests/*" = ["S101"]}

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

[tool.ruff.format]
# Black-compatible defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
